--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,154 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*,
+:after,
+:before {
+  box-sizing: border-box;
+  border: 0 solid #f3f3f3;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.625;
+  text-shadow: 1px 1px 1px rgb(0 0 0 / 0%);
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  --tw-text-opacity: 1;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+.overlay {
+    background-color: rgba(0,0,0,.35);
+  z-index: 21;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.drawer-cart.open,
+.dower-menu.open {
+  transform: translate(0);
+}
+
+.drawer-menu {
+  left: 0;
+}
+
+.drawer {
+  height: 100%;
+  max-width: 450px;
+  z-index: 22;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  --tw-bg-opacity: 1;
+  background-color: rgba(255,255,255,var(--tw-bg-opacity));
+  position: fixed;
+}
+
+.menuIcon {
+  width: 26px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.bar {
+  width: 13px;
+  height: 3px;
+  display: flex;
+  transition: all 0.25s ease-in-out;
+  background-color: rgb(32, 32, 32);
+}
+
+.bar:nth-child(2) {
+  width: 26px;
+  margin: 5px 0;
+}
+
+.bar:last-child {
+  width: 18px;
+}
+
+.absolute,
+.sr-only {
+  position: absolute;
+  
+}
+
+.sr-only {
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: 1px;
+  overflow: hidden;
+  color: #000;
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.menu-scrollbar {
+    max-height: calc(100vh - 138px);
+}
+
+.os-size-auto-observer.observed {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.os-size-auto-observer {
+    padding: inherit;
+    border: inherit solid transparent;
+}
+
+@media (min-width: 1024px) {
+  .lg\:flex {
+    display: flex;
+  }
+  .lg\:justify-center {
+    justify-content: center;
+  }
+  .lg\:ml-auto {
+    margin-left: auto;
+  }
+  .lg\:mr-10 {
+    margin-right: 2.5rem;
+  }
+  .lg\:max-w-screen-md {
+    max-width: 768px;
+  }
+  .lg\:pr-40px {
+    padding-right: 40px;
+}
+
+.lg\:hidden {
+    display: none;
+}
+  .lg\:shadow-header {
+    --tw-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent),
+      var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
+  }
+}
