--- a/styles/globals.css
+++ b/styles/globals.css
@@ -290,6 +290,20 @@ a {
   transition: all 0.2s ease-in-out;
 }
 
+.plus-icon {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  flex-shrink: 0;
+  display: flex;
+  align-items: content;
+  justify-content: content;
+}
+
+.pont-semibold {
+  font-weight: 600;
+}
+
 @media (min-width: 1024px) {
   .lg\:flex {
     display: flex;
