--- a/styles/globals.css
+++ b/styles/globals.css
@@ -304,6 +304,10 @@ a {
   font-weight: 600;
 }
 
+.shadow-navigation, .shadow-product-item {
+  box-shadow: var(--tw-ring-offset-shadow,0 0 transparent),var(--tw-ring-shadow,0 0 transparent),var(--tw-shadow);
+}
+
 @media (min-width: 1024px) {
   .lg\:flex {
     display: flex;
