--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,6 +64,27 @@ a {
   position: fixed;
 }
 
+.drawer-cart.open, .drawer-menu.open {
+  transform: translate(0);
+}
+
+.drawer-cart {
+  right: 0;
+}
+
+/* .cart {
+  height: 100%;
+  max-width: 450px;
+  z-index: 22;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+  position: fixed;
+} */
+
 .menuIcon {
   width: 26px;
   height: auto;
@@ -77,8 +98,12 @@ a {
   width: 13px;
   height: 3px;
   display: flex;
-  transition: all 0.25s ease-in-out;
+  transition: transform 0.25s ease-in-out;
   background-color: rgb(32, 32, 32);
+}
+
+.bar:hover {
+  transform: scaleX(2);
 }
 
 .bar:nth-child(2) {
@@ -306,6 +331,10 @@ a {
 
 .shadow-navigation, .shadow-product-item {
   box-shadow: var(--tw-ring-offset-shadow,0 0 transparent),var(--tw-ring-shadow,0 0 transparent),var(--tw-shadow);
+}
+
+.shadow-product-item {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.14);
 }
 
 @media (min-width: 1024px) {
